// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileAttachment should match snapshot, after change from file to image 1`] = `
<div
  className="post-image__column"
>
  <a
    aria-label="file thumbnail test.png"
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="post-image__load"
    />
  </a>
  <div
    className="post-image__details"
  >
    <div
      className="post-image__detail_wrapper"
      onClick={[Function]}
    >
      <div
        className="post-image__detail"
      >
        <span
          className="post-image__name"
        >
          test.png
        </span>
        <span
          className="post-image__type"
        >
          PNG
        </span>
        <span
          className="post-image__size"
        >
          100B
        </span>
      </div>
    </div>
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "png",
          "height": 400,
          "id": 2,
          "name": "test.png",
          "size": 100,
          "width": 600,
        }
      }
      handleImageClick={[Function]}
      iconClass="post-image__download"
    >
      <DownloadIcon />
    </FilenameOverlay>
  </div>
</div>
`;

exports[`FileAttachment should match snapshot, file with long name 1`] = `
<div
  className="post-image__column"
>
  <a
    aria-label="file thumbnail a-quite-long-filename-to-test-the-filename-shortener.pdf"
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <Connect(FileThumbnail)
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "a-quite-long-filename-to-test-the-filename-shortener.pdf",
          "size": 100,
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <div
      className="post-image__detail_wrapper"
      onClick={[Function]}
    >
      <div
        className="post-image__detail"
      >
        <span
          className="post-image__name"
        >
          a-quite-long-filename-to-test-the-f...
        </span>
        <span
          className="post-image__type"
        >
          PDF
        </span>
        <span
          className="post-image__size"
        >
          100B
        </span>
      </div>
    </div>
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "a-quite-long-filename-to-test-the-filename-shortener.pdf",
          "size": 100,
        }
      }
      handleImageClick={[Function]}
      iconClass="post-image__download"
    >
      <DownloadIcon />
    </FilenameOverlay>
  </div>
</div>
`;

exports[`FileAttachment should match snapshot, regular file 1`] = `
<div
  className="post-image__column"
>
  <a
    aria-label="file thumbnail test.pdf"
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <Connect(FileThumbnail)
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "test.pdf",
          "size": 100,
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <div
      className="post-image__detail_wrapper"
      onClick={[Function]}
    >
      <div
        className="post-image__detail"
      >
        <span
          className="post-image__name"
        >
          test.pdf
        </span>
        <span
          className="post-image__type"
        >
          PDF
        </span>
        <span
          className="post-image__size"
        >
          100B
        </span>
      </div>
    </div>
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "test.pdf",
          "size": 100,
        }
      }
      handleImageClick={[Function]}
      iconClass="post-image__download"
    >
      <DownloadIcon />
    </FilenameOverlay>
  </div>
</div>
`;

exports[`FileAttachment should match snapshot, regular image 1`] = `
<div
  className="post-image__column"
>
  <a
    aria-label="file thumbnail test.png"
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <Connect(FileThumbnail)
      fileInfo={
        Object {
          "extension": "png",
          "height": 400,
          "id": 1,
          "name": "test.png",
          "size": 100,
          "width": 600,
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <div
      className="post-image__detail_wrapper"
      onClick={[Function]}
    >
      <div
        className="post-image__detail"
      >
        <span
          className="post-image__name"
        >
          test.png
        </span>
        <span
          className="post-image__type"
        >
          PNG
        </span>
        <span
          className="post-image__size"
        >
          100B
        </span>
      </div>
    </div>
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "png",
          "height": 400,
          "id": 1,
          "name": "test.png",
          "size": 100,
          "width": 600,
        }
      }
      handleImageClick={[Function]}
      iconClass="post-image__download"
    >
      <DownloadIcon />
    </FilenameOverlay>
  </div>
</div>
`;

exports[`FileAttachment should match snapshot, small image 1`] = `
<div
  className="post-image__column"
>
  <a
    aria-label="file thumbnail test.png"
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <Connect(FileThumbnail)
      fileInfo={
        Object {
          "extension": "png",
          "height": 16,
          "id": 1,
          "name": "test.png",
          "size": 100,
          "width": 16,
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <div
      className="post-image__detail_wrapper"
      onClick={[Function]}
    >
      <div
        className="post-image__detail"
      >
        <span
          className="post-image__name"
        >
          test.png
        </span>
        <span
          className="post-image__type"
        >
          PNG
        </span>
        <span
          className="post-image__size"
        >
          100B
        </span>
      </div>
    </div>
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "png",
          "height": 16,
          "id": 1,
          "name": "test.png",
          "size": 100,
          "width": 16,
        }
      }
      handleImageClick={[Function]}
      iconClass="post-image__download"
    >
      <DownloadIcon />
    </FilenameOverlay>
  </div>
</div>
`;

exports[`FileAttachment should match snapshot, svg image 1`] = `
<div
  className="post-image__column"
>
  <a
    aria-label="file thumbnail test.svg"
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <Connect(FileThumbnail)
      fileInfo={
        Object {
          "extension": "svg",
          "height": 400,
          "id": 1,
          "name": "test.svg",
          "size": 100,
          "width": 600,
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <div
      className="post-image__detail_wrapper"
      onClick={[Function]}
    >
      <div
        className="post-image__detail"
      >
        <span
          className="post-image__name"
        >
          test.svg
        </span>
        <span
          className="post-image__type"
        >
          SVG
        </span>
        <span
          className="post-image__size"
        >
          100B
        </span>
      </div>
    </div>
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "svg",
          "height": 400,
          "id": 1,
          "name": "test.svg",
          "size": 100,
          "width": 600,
        }
      }
      handleImageClick={[Function]}
      iconClass="post-image__download"
    >
      <DownloadIcon />
    </FilenameOverlay>
  </div>
</div>
`;

exports[`FileAttachment should match snapshot, when file is not loaded 1`] = `
<div
  className="post-image__column"
>
  <a
    aria-label="file thumbnail test.pdf"
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="post-image__load"
    />
  </a>
  <div
    className="post-image__details"
  >
    <div
      className="post-image__detail_wrapper"
      onClick={[Function]}
    >
      <div
        className="post-image__detail"
      >
        <span
          className="post-image__name"
        >
          test.pdf
        </span>
        <span
          className="post-image__type"
        >
          PDF
        </span>
        <span
          className="post-image__size"
        >
          100B
        </span>
      </div>
    </div>
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "test.pdf",
          "size": 100,
        }
      }
      handleImageClick={[Function]}
      iconClass="post-image__download"
    >
      <DownloadIcon />
    </FilenameOverlay>
  </div>
</div>
`;

exports[`FileAttachment should match snapshot, with compact display 1`] = `
<div
  className="post-image__column"
>
  <div
    className="post-image__details"
  >
    <FilenameOverlay
      canDownload={true}
      compactDisplay={true}
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "test.pdf",
          "size": 100,
        }
      }
      handleImageClick={[Function]}
      iconClass="post-image__download"
    >
      <DownloadIcon />
    </FilenameOverlay>
  </div>
</div>
`;

exports[`FileAttachment should match snapshot, without compact display and without can download 1`] = `
<div
  className="post-image__column"
>
  <a
    aria-label="file thumbnail test.pdf"
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <Connect(FileThumbnail)
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "test.pdf",
          "size": 100,
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <div
      className="post-image__detail_wrapper"
      onClick={[Function]}
    >
      <div
        className="post-image__detail"
      >
        <span
          className="post-image__name"
        >
          test.pdf
        </span>
        <span
          className="post-image__type"
        >
          PDF
        </span>
        <span
          className="post-image__size"
        >
          100B
        </span>
      </div>
    </div>
  </div>
</div>
`;
